--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:css": "npx @tailwindcss/cli -i ./src/styles.css -o ./src/output.css --watch",
-    "serve": "live-server --open=./src/index.html",
+    "serve": "live-server",
     "dev": "npm-run-all --parallel build:css serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
